# confianalyzer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml
analyzers/go/: analyzer_test.go  confianalyzer-analyze-go  go.mod  main.go
analyzers/java/: pom.xml
analyzers/js-ts/: package-lock.json  package.json  tsconfig.json
analyzers/python/: pyproject.toml
analyzers/python/confianalyzer_python/: __init__.py  __main__.py  analyzer.py  ast_walker.py  cli.py  config.py
analyzers/python/confianalyzer_python/framework_plugins/: __init__.py  fastapi.py  flask.py  sqlalchemy.py
analyzers/python/confianalyzer_python/tests/: test_analyzer.py  test_config.py
analyzers/rust/: Cargo.toml
analyzers/rust/src/: analyzer.rs  ast_walker.rs  ir_types.rs  main.rs
analyzers/rust/src/plugins/: actix.rs  axum.rs  diesel.rs  mod.rs
analyzers/rust/src/tests/: analyzer_tests.rs
docs/: architecture.md  database-schema.md  federated-architecture.md  guided-exploration-design.md  investigator-workspace-design.md  nlp-interface-design.md  user-guide.md  veograph-system-design-reference.md
docs/reference/: veograph-enums.ts  veograph-graph-types.ts  veograph-ir-types.ts
tests/integration/: cross-repo-stitching.test.ts  cypher-generation.test.ts  neo4j-live.test.ts  package-lock.json  package.json  python-analyzer.test.ts  ts-analyzer.test.ts  tsconfig.json
(+56 files in other folders)
